# baume

./: .gitignore  README.md  meson.build
include/: baume.h  meson.build
src/: functions.h  main.c  meson.build  nodes.c
src/tree/: inOrden.c  inOrder.c  meson.build  preorder.c  rotations.c  traversals.c  tree.c  treeheight.c
tests/: meson.build  nodes.c
tests/main/: tree_demo.c
tests/rotations/: meson.build  rotations.c
tests/traversals/: avl.c  inorder.c  meson.build  postorder.c  preorder.c  rotaciones.c
tests/tree/: meson.build
tests/tree_functions/: extract.c  height.c  print.c  search.c
