preorder = executable('preorder_test', 'preorder.c',
  link_with: libbaume,
  include_directories: includes)
test('preorder_test', preorder)

inorder = executable('inorder_test', 'inorder.c',
  link_with: libbaume,
  include_directories: includes)
test('inorder_test', inorder)

postorder = executable('postorder_test', 'postorder.c',
  link_with: libbaume,
  include_directories: includes)
test('postorder_test', postorder)

rotaciones = executable('rotaciones_test', 'rotaciones.c',
  link_with: libbaume,
  include_directories: includes)
test('rotaciones_test', rotaciones)
