extract = executable('extract_test', 'extract.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_extract_test', extract)

insert = executable('insert_test', 'insert.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_insert_test', insert)

height = executable('height_test', 'height.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_height_test', height)

print = executable('print_test', 'print.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_print_test', print)

search = executable('search_test', 'search.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_search_test', search)

set_notation = executable('set_notation_test', 'set_notation.c',
  link_with: libbaume,
  include_directories: includes)
test('tree_set_notation_test', set_notation)

